--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,5 +2,64 @@
     width: 100%;
     height: 100%;
     float: left;
-    margin: 0;
+    margin-top: -120px;
+    position: relative; 
+    left: -120px; 
+    top: -80px;
+}
+
+
+#wrapper {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/background_img.jpg)
+   
+}
+
+#randomNumber {
+    background: lightcyan;
+    margin-top: -150px;
+    width: 200px;
+    height: 150px;
+    margin-left: 20px;
+    padding: 20px;
+    float: left;
+}
+
+#winslosses {
+    background: lightcyan;
+    margin-top: 30px;
+    width: 200px;
+    height: 200px; 
+    margin-left: 50%;
+    padding: 20px;  
+}
+
+#mainTitle {
+    background: transparent;
+    color: whitesmoke;
+    height: 100px;
+    margin-top: -50px;
+    
+}
+
+#instructions {
+    background: lightcyan;
+    height: 300px;
+    width: 500px;
+    padding: 20px;
+    margin-left: 23%;
+}
+
+#totalScore {
+    background: lightcyan;
+    margin-top: -60px;
+    width: 400px;
+    height: 150px;  
+    margin-left: 20px;
+    padding: 20px;
+    margin-bottom: 150px; 
+     
+
 }
