--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     float: left;
-    margin-top: -120px;
+    margin-top: -130px;
     position: relative; 
     left: -120px; 
     top: -80px;
@@ -19,21 +19,23 @@
 
 #randomNumber {
     background: lightcyan;
-    margin-top: -150px;
+    margin-top: -200px;
     width: 200px;
     height: 150px;
     margin-left: 20px;
     padding: 20px;
     float: left;
+    font-size: 20px;
 }
 
 #winslosses {
     background: lightcyan;
-    margin-top: 30px;
+    margin-top: 40px;
     width: 200px;
-    height: 180px; 
+    height: 210px; 
     margin-left: 50%;
     padding: 20px;  
+    font-size: 20px;
 }
 
 #mainTitle {
@@ -41,6 +43,7 @@
     color: whitesmoke;
     height: 100px;
     margin-top: -50px;
+    font-size: 40px;
     
 }
 
@@ -55,11 +58,12 @@
 #totalScore {
     background: lightcyan;
     margin-top: -60px;
-    width: 400px;
+    width: 200px;
     height: 150px;  
     margin-left: 20px;
     padding: 20px;
     margin-bottom: 150px; 
+    font-size: 20px; 
      
 
 }
