--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,16 @@
     width: 100%;
     height: 100%;
     float: left;
-    margin-top: -130px;
+    margin-top: -128px;
     position: relative; 
     left: -120px; 
     top: -80px;
 }
 
+.jumbotron h1 {
+    font-size: 2em;
+    
+}
 
 #wrapper {
     text-align: center;
@@ -18,24 +22,26 @@
 }
 
 #randomNumber {
-    background: lightcyan;
+    background-image: url(../images/marble_background.jpg);
     margin-top: -200px;
-    width: 200px;
-    height: 150px;
+    width: 220px;
+    height: 130px;
     margin-left: 20px;
     padding: 20px;
     float: left;
     font-size: 20px;
+    font-weight: bold;
 }
 
 #winslosses {
-    background: lightcyan;
+    background-image: url(../images/marble_background.jpg);
     margin-top: 40px;
     width: 200px;
     height: 210px; 
     margin-left: 50%;
     padding: 20px;  
     font-size: 20px;
+    font-weight: bold;
 }
 
 #mainTitle {
@@ -48,22 +54,23 @@
 }
 
 #instructions {
-    background: lightcyan;
+    background-image: url(../images/marble_background.jpg);
     height: 300px;
     width: 500px;
     padding: 20px;
-    margin-left: 23%;
+    margin-left: 25%;
+    margin-top: 20px;
 }
 
 #totalScore {
-    background: lightcyan;
-    margin-top: -60px;
+    background-image: url(../images/marble_background.jpg);;
+    margin-top: -70px;
     width: 200px;
-    height: 150px;  
+    height: 130px;  
     margin-left: 20px;
     padding: 20px;
     margin-bottom: 150px; 
-    font-size: 20px; 
-     
+    font-size: 20px;    
+    font-weight: bold; 
 
 }
